Add serde dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 [dependencies]
 toml = "0.5.9"
 
+[dependencies.serde]
+version = "1.0.143"
+features = ["derive"]
+
 [dependencies.tokio]
 version = "1.20.1"
 features = ["macros", "rt-multi-thread"]
