--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ features = ["derive"]
 
 [dependencies.tokio]
 version = "1.20.1"
-features = ["fs", "net", "sync", "macros", "io-util", "rt-multi-thread"]
+features = ["fs", "net", "macros", "io-util", "rt-multi-thread"]
