Add sync feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 [dependencies]
 toml = "0.5.9"
 dirs = "4.0.0"
-rhai = "1.8.0"
 color-eyre = "0.6.2"
+
+[dependencies.rhai]
+version = "1.8.0"
+features = ["sync"]
 
 [dependencies.serde]
 version = "1.0.143"
