--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 toml = "0.5.9"
 dirs = "4.0.0"
 color-eyre = "0.6.2"
+thiserror = "1.0.34"
 
 [dependencies.rhai]
 version = "1.8.0"
